--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "science-analizator",
-  "version": "0.1.0",
-  "private": true,
+  "name": "science-analyzer-backend",
+  "version": "1.0.0",
+  "description": "Backend service to fetch latest articles from top science journals",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest"
   },
+  "keywords": ["science", "journals", "articles", "api"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5"
+    "express": "^4.18.2",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "rss-parser": "^3.13.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "nodemon": "^3.0.1",
+    "jest": "^29.7.0"
   }
-}
+} 
