Add SQLite database integration: Implement database connectivity tests, create articles table, and enhance article processing with content storage. Update API endpoints for database access and statistics retrieval. Include README updates for database usage and schema.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "rss-parser": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "sqlite3": "^5.1.6",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
