--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.6",
-    "turndown": "^7.1.2"
+    "turndown": "^7.1.2",
+    "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
