--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.6",
     "turndown": "^7.1.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "openai": "^4.68.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
